--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,31 @@
 {% extends "layout.html" %}
 
-{% block title %}{% endblock %}
+{% block title %}Tasks Manager{% endblock %}
 
 {% block content %}
-    
+    <h2>My Tasks</h2>
+    <table class="table table-hover table-bordered table-striped">
+        <thead class="thead-light">
+            <tr>
+                <th>#</th>
+                <th>Task</th>
+                <th>Due Date</th>
+                <th>Completion Status</th>
+                <th>Priority</th>
+                <th>Details</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for task in tasks %}
+                <tr>
+                    <td>{{ task.id }}</td>
+                    <td>{{ task.task_name}}</td>
+                    <td>{{ task.due_date}}</td>
+                    <td>{{ task.completion_status}}</td>
+                    <td>{{ task.priority}}</td>
+                    <td>{{ task.details}}</td>
+                </tr>
+            {% endfor %}
+        </tbody>
+    </table>
 {% endblock %}
