--- a/templates/index.html
+++ b/templates/index.html
@@ -19,11 +19,12 @@
             {% for task in tasks %}
                 <tr>
                     <td>{{ task.id }}</td>
-                    <td>{{ task.task_name}}</td>
+                    <td>{{ task.task}}</td>
                     <td>{{ task.due }}</td>
                     <td>{{ task.completion_status}}</td>
                     <td>{{ task.priority}}</td>
                     <td>{{ task.details}}</td>
+                    <td><a href="{{ url_for('edit_task', task_id=task.id) }}">Edit</a></td>
                 </tr>
             {% endfor %}
         </tbody>
