--- a/templates/index.html
+++ b/templates/index.html
@@ -24,10 +24,15 @@
                     <td>{{ task.completion_status}}</td>
                     <td>{{ task.priority}}</td>
                     <td>{{ task.details}}</td>
-                    <td><a href="{{ url_for('edit_task', task_id=task.id) }}">Edit</a></td>
+                    <td><a href="{{ url_for('update_task', task_id=task.id) }}">Update</a></td>
+                    <td>
+                        <form action="{{ url_for('delete_task', task_id=task.id) }}" method="post" onsubmit="return confirm('Are you sure you want to delete this task?');">
+                            <button type="submit" class="btn btn-danger">Delete</button>
+                        </form>
+                    </td>
                 </tr>
             {% endfor %}
         </tbody>
     </table>
-    <a href="{{ url_for('add_task') }}">Add</a>
+    <a href="/add_task">Add</a>
 {% endblock %}
