--- a/templates/register.html
+++ b/templates/register.html
@@ -13,6 +13,6 @@
         <div class="mb-3">
             <input class="form-control mx-auto w-auto" id="confirmation" name="confirmation" placeholder="Confirm Password" type="text">
         </div>
-        <button class="btn btn-primary" type="submit">Log In</button>
+        <button class="btn btn-primary" type="submit">Register</button>
     </form>
 {% endblock %}
