--- a/templates/update_task.html
+++ b/templates/update_task.html
@@ -3,7 +3,7 @@
 {% block title %}Update Task{% endblock %}
 
 {% block content %}
-<form action="{{ url_for('update_task') }}" method="post">
+<form action="/update_task" method="post">
     <label for="task">Task</label>
     <input type="text" name="task" id="task" value="{{ task.task }}">
     <br>
