--- a/templates/update_task.html
+++ b/templates/update_task.html
@@ -3,32 +3,34 @@
 {% block title %}Update Task{% endblock %}
 
 {% block content %}
-<form action="/update_task" method="post">
-    <label for="task">Task</label>
-    <input type="text" name="task" id="task" value="{{ task.task }}">
-    <br>
-    <label for="due">Due Date</label>
-    <input type="text" name="due" id="due" value="{{ task.due}}">
-    <br>
-    <label for="completion_status">Completion Status</label>
-    <select name="completion_status">
-        <option selected>{{ task.completion_status }}</option>
-        <option value="Not Started">Not Started</option>
-        <option value="In Progress">In Progress</option>
-        <option value="Done">Done</option>
-    </select>
-    <br>
-    <label for="priority">Priority</label>
-    <select name="priority">
-        <option selected>{{ task.priority }}</option>
-        <option value="Low">Low</option>
-        <option value="Medium">Medium</option>
-        <option value="High">High</option>
-    </select>
-        <br>
-        <label for="details">Details</label>
-        <input type="text" name="details" id="details" value="{{ task.details }}">
-        <br>
-    <button type="submit">Update</button>
-</form>
+    <div class="form-container">
+        <form action="/update_task" method="post">
+            <label class="label" for="task">Task</label>
+            <input class="input-field" type="text" name="task" id="task" value="{{ task.task }}">
+            <br>
+            <label class="label" for="due">Due Date</label>
+            <input class="input-field" type="text" name="due" id="due" value="{{ task.due}}">
+            <br>
+            <label class="label" for="completion_status">Completion Status</label>
+            <select class="input-field" name="completion_status">
+                <option selected>{{ task.completion_status }}</option>
+                <option value="Not Started">Not Started</option>
+                <option value="In Progress">In Progress</option>
+                <option value="Done">Done</option>
+            </select>
+            <br>
+            <label class="label" for="priority">Priority</label>
+            <select class="input-field" name="priority">
+                <option selected>{{ task.priority }}</option>
+                <option value="Low">Low</option>
+                <option value="Medium">Medium</option>
+                <option value="High">High</option>
+            </select>
+                <br>
+                <label class="label" for="details">Details</label>
+                <input class="input-field" type="text" name="details" id="details" value="{{ task.details }}">
+                <br>
+            <button class="btn btn-primary" type="submit">Update</button>
+        </form>
+    </div>
 {% endblock %}
