--- a/templates/login.html
+++ b/templates/login.html
@@ -12,6 +12,11 @@
                 <input class="form-control mx-auto w-auto" id="password" name="password" placeholder="Password" type="password">
             </div>
             <button class="btn btn-primary" type="submit">Log In</button>
+            <br>
+            <br>
+            <div class="mt-3">
+                Don't have an account? <a href="/register">Register</a>
+            </div>
         </form>
     </div>
 {% endblock %}
