--- a/templates/register.html
+++ b/templates/register.html
@@ -15,6 +15,11 @@
                 <input class="form-control mx-auto w-auto" id="confirmation" name="confirmation" placeholder="Confirm Password" type="text">
             </div>
             <button class="btn btn-primary" type="submit">Register</button>
+            <br>
+            <br>
+            <div class="mt-3">
+                Already have an account? <a href="/login">Log In</a>
+            </div>
         </form>
     </div>
 {% endblock %}
