--- a/templates/apology.html
+++ b/templates/apology.html
@@ -1,10 +1,10 @@
 {% extends "layout.html" %}
 
 {% block title %}
-    Errror
+    Error
 {% endblock %}
 
 {% block main %}
-    <h1>400</h1>
+    <h1>Error</h1>
     <p>{{ message }}</p>
 {% endblock %}
